<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".mainActivity"
    android:orientation="vertical">

    <ExpandableListView
        android:layout_width="fill_parent"
        android:layout_height="0sp"
        android:layout_weight="0.9"
        android:id="@+id/listView"/>

    <Button
        android:id="@+id/addCategoryButton"
        android:layout_width="fill_parent"
        android:layout_height="0sp"
        android:layout_weight="0.1"
        android:text="@string/addCategoryButtonText"
        android:onClick="OnAddCategoryClick" />
</LinearLayout>
